--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,6 @@ make_config.mk
 *.o-*
 *.swp
 *~
-*.vcxproj
-*.vcxproj.filters
-*.sln
 *.cmake
 CMakeCache.txt
 CMakeFiles/
@@ -61,3 +58,10 @@ java/javadoc
 scan_build_report/
 t
 LOG
+
+build_vs/Debug
+build_vs/Release
+build_vs/*.sdf
+build_vs/*.opensdf
+build_vs/*.user
+build_vs/*.suo
